Resolved bug in DiscoveryServiceTest, improved tests for networkd module, added multiplayer support for network